fix z-index in demo, to gh-page

--- a/sources/styles/specs/menu.scss
+++ b/sources/styles/specs/menu.scss
@@ -1,11 +1,12 @@
 mn-autocomplete menu {
   width: 100%;
-  max-height: 10em;
+  max-height: 15em;
   position: absolute;
   margin: 0;
   padding: 0;
   overflow-x: hidden;
   overflow-y: auto;
+  -webkit-overflow-scrolling: touch;
   top: calc(100% + 2px); left: 0;
   transition: opacity .2s ease;
   opacity: 0;
